[gd_scene load_steps=12 format=2]

[ext_resource path="res://Testing/Title.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/MainMenu/Play/PlayFocus.png" type="Texture" id=3]
[ext_resource path="res://UI/MainMenu/Options/OptionsNormal.png" type="Texture" id=4]
[ext_resource path="res://UI/MainMenu/Play/PlayNormal.png" type="Texture" id=5]
[ext_resource path="res://UI/MainMenu/Controls/ControlsFocus.png" type="Texture" id=6]
[ext_resource path="res://UI/MainMenu/Options/OptionsFocus.png" type="Texture" id=7]
[ext_resource path="res://UI/MainMenu/Controls/ControlsNormal.png" type="Texture" id=8]
[ext_resource path="res://UI/MainMenu/Quit/QuitNormal.png" type="Texture" id=9]
[ext_resource path="res://UI/MainMenu/Quit/QuitFocus.png" type="Texture" id=10]
[ext_resource path="res://icon.png" type="Texture" id=11]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.329
margin_top = -98.0111
margin_right = -142.329
margin_bottom = 65.9889
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 41.0
rect_min_size = Vector2( 64, 20 )
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Controls")
focus_next = NodePath("../Controls")
focus_previous = NodePath("../Quit")
size_flags_horizontal = 0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 3 )

[node name="Controls" type="TextureButton" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 128.0
margin_bottom = 86.0
rect_min_size = Vector2( 64, 20 )
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Options")
size_flags_horizontal = 0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 6 )

[node name="Options" type="TextureButton" parent="VBoxContainer"]
visible = false
margin_top = 90.0
margin_right = 128.0
margin_bottom = 131.0
rect_min_size = Vector2( 64, 20 )
size_flags_horizontal = 0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 7 )

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 128.0
margin_bottom = 131.0
rect_min_size = Vector2( 64, 20 )
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Play")
focus_next = NodePath("../Play")
focus_previous = NodePath("../Options")
size_flags_horizontal = 0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -78.0
margin_bottom = 66.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
